# rtic-mc-experiments

./: README.md  README2.md  gen_doc.sh  index.html  init_new_syntax.md  microamp_integration.md  modular_arch.drawio  modular_rtic_impl.md  rtic_mc.md  rtic_mc_steps.md
compilation-tests/mmrtic_led_toggler/: Cargo.toml  Embed.toml
compilation-tests/mmrtic_led_toggler/examples/: ex.rs
compilation-tests/mmrtic_led_toggler/src/: main.rs
compilation-tests/rticv1_multitasker/: Cargo.toml
compilation-tests/rticv1_multitasker/.cargo/: config.toml
compilation-tests/rticv1_multitasker/src/: main.rs
compilation-tests/rticv2_multitasker/: Cargo.toml
compilation-tests/rticv2_multitasker/src/: main.rs
distribution-template/: Cargo.toml  README.md
distribution-template/rtic-macro/: Cargo.toml
distribution-template/rtic-macro/src/: lib.rs
distributions/atalanta-rtic/: Cargo.toml  README.md  rust-toolchain.toml
distributions/atalanta-rtic/example-apps/: Cargo.toml  Makefile  README.md
distributions/atalanta-rtic/example-apps/.cargo/: config.toml
distributions/atalanta-rtic/example-apps/examples/: idle.rs  periodic_tasks.rs  rtic_deadline.rs  rtic_meetup.rs  rtic_paper_ex.rs  rtic_time_stamp.rs  rtic_uart2.rs  rtic_uart3.rs  rtic_uart_sw.rs  shared.rs
distributions/atalanta-rtic/pcs-pass/: Cargo.toml
distributions/atalanta-rtic/pcs-pass/src/: codegen.rs  lib.rs
distributions/atalanta-rtic/pcs-pass/src/parse/: ast.rs  mod.rs
distributions/atalanta-rtic/rtic-macro/: Cargo.toml
distributions/atalanta-rtic/rtic-macro/src/: lib.rs
distributions/atalanta-rtic/src/: export.rs
distributions/distribution-template/: Cargo.toml
distributions/distribution-template/.cargo/: config.toml
distributions/distribution-template/rtic-macro/: Cargo.toml
distributions/distribution-template/rtic-macro/src/: lib.rs
distributions/distribution-template/src/: export.rs
distributions/rp2040-rtic/rp2040-rtic-macro/: Cargo.toml
distributions/rp2040-rtic/rp2040-rtic-macro/src/: lib.rs
distributions/stm32-renode-rtic/: Cargo.toml  cargo_build.sh  core0.x  core1.x
distributions/stm32-renode-rtic/examples/: hello_rtic_multi.rs  ping_pong.rs  ping_pong_external_task.rs
distributions/stm32-renode-rtic/renode/: gdb.sh  mailbox.cs  run.sh
distributions/stm32-renode-rtic/src/: export.rs  lib.rs  mailbox.rs
distributions/stm32-renode-rtic/stm32-renode-rtic-macro/: Cargo.toml
distributions/stm32-renode-rtic/stm32-renode-rtic-macro/src/: lib.rs
rp2040-rtic/: Cargo.toml
rp2040-rtic/.cargo/: config.toml
rp2040-rtic/examples/: __expanded.rs  __expanded_sw_pass.rs  blinky.rs  blinky_expanded.rs  hello_rtic_copy.rs  hello_rtic_expanded.rs  multicore.rs  ping_pong.rs  ping_pong_expanded.rs
rp2040-rtic/rp2040-rtic-macro/: Cargo.toml
rp2040-rtic/rp2040-rtic-macro/src/: lib.rs
rp2040-rtic/src/: export.rs  lib.rs
rtic-auto-assign/: Cargo.toml
rtic-auto-assign/src/: auto_assign.rs  lib.rs
rtic-auto-assign/src/codegen/: mod.rs
rtic-auto-assign/src/parse/: ast.rs  mod.rs
rtic-core/: .gitignore  Cargo.toml
rtic-core/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
rtic-core/doc/rtic_core/: all.html  index.html  sidebar-items.js  struct.Analysis.html  struct.App.html  struct.AppArgs.html  struct.RticMacroBuilder.html  struct.SubAnalysis.html  struct.SubApp.html  trait.CorePassBackend.html  trait.RticPass.html
rtic-core/doc/rtic_core/analysis/: struct.Analysis.html  struct.SubAnalysis.html
rtic-core/doc/rtic_core/backend/: trait.CorePassBackend.html
rtic-core/doc/rtic_core/common_internal/rtic_functions/: constant.INTERRUPT_FREE_FN.html  index.html
rtic-core/doc/rtic_core/common_internal/rtic_traits/: constant.HWT_TRAIT_TY.html  constant.IDLE_TRAIT_TY.html  constant.MUTEX_TY.html  constant.SWT_TRAIT_TY.html  index.html
rtic-core/doc/rtic_core/errors/: enum.ParseError.html  index.html
rtic-core/doc/rtic_core/multibin/: fn.multibin_cfg_attr_not_core.html  fn.multibin_cfg_core.html  fn.multibin_cfg_not_core.html  fn.multibin_shared.html  index.html  sidebar-items.js
rtic-core/doc/rtic_core/parse_utils/: index.html  sidebar-items.js  struct.RticAttr.html
rtic-core/doc/rtic_core/parser/: struct.App.html  struct.SubApp.html
rtic-core/doc/rtic_core/parser/ast/: struct.AppArgs.html
rtic-core/doc/rtic_core/rtic_functions/: constant.INTERRUPT_FREE_FN.html  index.html  sidebar-items.js
rtic-core/doc/rtic_core/rtic_traits/: constant.HWT_TRAIT_TY.html  constant.IDLE_TRAIT_TY.html  constant.MUTEX_TY.html  constant.SWT_TRAIT_TY.html  index.html  sidebar-items.js
rtic-core/doc/search.desc/rtic_core/: rtic_core-desc-0-.js
rtic-core/doc/src/rtic_core/: backend.rs.html  errors.rs.html  lib.rs.html
rtic-core/doc/src/rtic_core/analysis/: mod.rs.html
rtic-core/doc/src/rtic_core/codegen/: hw_task.rs.html  mod.rs.html  shared_resources.rs.html  task_init.rs.html  utils.rs.html
rtic-core/doc/src/rtic_core/common_internal/: mod.rs.html  rtic_functions.rs.html  rtic_traits.rs.html
rtic-core/doc/src/rtic_core/parse_utils/: mod.rs.html
rtic-core/src/: backend.rs  errors.rs  lib.rs
rtic-core/src/analysis/: mod.rs
rtic-core/src/codegen/: hw_task.rs  mod.rs  shared_resources.rs  sw_task.rs  task_init.rs  utils.rs
rtic-core/src/common/: mod.rs  rtic_functions.rs  rtic_traits.rs  utils.rs
rtic-core/src/common_internal/: mod.rs  rtic_functions.rs  rtic_traits.rs
rtic-core/src/parse_utils/: mod.rs
rtic-core/src/parser/: ast.rs  mod.rs
rtic-hippo/: Cargo.toml  README.md
rtic-hippo/example-apps/: Cargo.toml
rtic-hippo/example-apps/examples/: rtic_meetup.rs
rtic-hippo/rtic-macro/: Cargo.toml
rtic-hippo/rtic-macro/src/: lib.rs
rtic-hippo/src/: export.rs
rtic-spsc/: Cargo.toml
rtic-sw-pass/: Cargo.toml
rtic-sw-pass/src/: export.rs  lib.rs
rtic-sw-pass/src/software_pass/: analyze.rs  mod.rs
rtic-sw-pass/src/software_pass/codegen/: mod.rs  utils.rs
rtic-sw-pass/src/software_pass/parse/: ast.rs  mod.rs
stm32-renode-rtic/stm32-renode-rtic-macro/: Cargo.toml
stm32-renode-rtic/stm32-renode-rtic-macro/src/: lib.rs
(+125 files in other folders)
