[package]
name = "rtic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false
bench = false

[dependencies]

heapless = { version = "0.8.0" }
rtic-macro = { path = "rtic-macro" }
rtic-sw-pass = { path = "../rtic-sw-pass", default-features = false }

# stm32 stuff
cortex-m-semihosting = "0.3.2"
# cortex-m = "0.5.8"
cortex-m = "0.7.7"
nb = "0.1.1"
embedded-hal = { version = "1.0.0" }
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103", "rt"] }
cortex-m-rt = "0.7.3"
volatile-register = "0.2.2"
microamp = { path = "/home/zakaria/myrtic/microamp" }


[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"

embedded-hal = "0.2.7"
# futures = "0.3.29"
panic-halt = "0.2.0"


defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
