[package]
name = "rtic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
heapless = { version = "0.8.0" }
#heapless = { version = "0.8.0", features = ["portable-atomic"] }
rtic-macro = { path = "rp2040-rtic-macro" }
rtic-sw-pass = {path = "../rtic-sw-pass", default-features = false}
log = "0.4.21"
rp2040-hal = "0.9.1"

[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"

embedded-hal = "0.2.7"
# futures = "0.3.29"
panic-halt = "0.2.0"
rp-pico = { version = "0.8.0", features = ["boot2"] }
rp2040-boot2 = "0.3.0"
rp2040-hal = {version = "0.9.1", features = ["rt"]}



defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
