[package]
name = "rtic-auto-assign"
version = "0.1.0"
edition = "2021"
authors = ["Zakaria Madaoui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = { version = "0.5.0" }
proc-macro2 = { version = "1.0.79" }
quote = { version = "1.0.35" }
syn = { version = "2.0.53", features = ["extra-traits", "full"] }
rtic-core = { path = "../rtic-core" }
heapless = "0.8.0"
thiserror = "1.0.58"
