[package]
name = "rtic-core"
version = "0.1.0"
edition = "2021"

autotests = false
publish = false

[lib]
test = false
bench = false

[dependencies]
derive_builder = "0.20.0"
heck = "0.4.1"
proc-macro2 = "1.0.78"
project-root = "0.2.2"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits", "full"] }

[features]
multibin = []
