[package]
name = "rtic-core"
version = "0.1.0"
edition = "2021"

autotests = false
publish = false

[lib]
test = false
bench = false

[dependencies]
derive_builder = "0.20.0"
heck = "0.4.1"
proc-macro2 = "1.0.78"
project-root = "0.2.2"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits", "full"] }
thiserror = "1.0.63"

[features]
# This feature should be enabled for systems where it is expected to produce multiple binaries from one RTIC application source
multibin = []
# This feature should be enabled for systems where multiple paths to PACs are needed to be provided to the `device` argument in the #[app(device = ... )], the syntax will become: #[app(device = [path1, path2...path_cores_nbr] )]
multipac = []
# This feature can be enabled to produce an examples/expanded.rs of a successfully compiled application
debug_expand = []
