[package]
name = "rtic"
version = "0.1.0-hippo"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false
bench = false

[dependencies]
heapless = { version = "0.8.0" }
rtic-macro = { path = "rtic-macro" }
riscv = "0.11"
rtic-sw-pass = { path = "../rtic-sw-pass", default-features = false }
rtic-deadline-pass = { path = "../rtic-deadline-pass", default-features = false }

#nb = "0.1.1"
hippomenes-core = { git = "https://github.com/onsdagens/hippomenes-core" }

[features]
deadline-pass = ["rtic-macro/deadline-pass"]
