[package]
name = "rtic-sw-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = { version = "0.5.0", optional = true}
proc-macro2 = { version = "1.0.79", optional = true}
quote = {version =  "1.0.35", optional = true}
syn = { version = "2.0.53", features = ["extra-traits", "full"], optional = true}
rtic-core = {path = "../rtic-core" , optional = true}
heapless = "0.8.0"

[features]
std = ["dep:heck","dep:proc-macro2","dep:quote","dep:syn", "dep:rtic-core" ]
# std enabled by default, disable this when you need to export no_std part
default = ["std"]
