[package]
name = "led_toggler_mmrtic"
version = "0.1.0"
edition = "2021"
authors = ["Zakaria Madaoui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "led_toggler_mmrtic"
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
# cortex-m-rtic = "1.1.4"
embedded-hal = "0.2.7"
fugit = "0.3.7"
heapless = "0.8.0"
panic-halt = "0.2.0"
rp-pico = { version = "0.8.0", features = ["boot2"] }
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.9.1"


# portable-atomic = { version = "1", features = ["critical-section"] }
# futures = "0.3.29"
rtic = { path = "../../distributions/rp2040-rtic" }
