[package]
name = "rtic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false
bench = false

[dependencies]
rtic-macro = { path = "rtic-macro" }
rtic-sw-pass = { path = "../../compilation_passes/rtic-sw-pass", default-features = false }
rtic-deadline-pass = { path = "../../compilation_passes/rtic-deadline-pass", default-features = false }
bsp = { package = "atalanta-bsp", git = "https://github.com/soc-hub-fi/atalanta.git", tag = "v0.2.1" }

[features]
deadline-pass = ["rtic-macro/deadline-pass"]
pcs-pass = ["rtic-macro/pcs-pass"]
fpga = ["bsp/fpga"]
rtl-tb = ["bsp/rtl-tb"]
