[package]
name = "rtic"
version = "0.1.0"
edition = "2021"
authors = ["Zakaria Madaoui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false
bench = false

[dependencies]

rtic-macro = { path = "rtic-macro" }
rtic-sw-pass = { path = "../rtic-sw-pass", default-features = false }

cortex-m-semihosting = "0.3.2"
cortex-m = "0.7.7"
nb = "0.1.1"
embedded-hal = { version = "1.0.0" }
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103", "rt"] }
cortex-m-rt = "0.7.3"
volatile-register = "0.2.2"
# microamp = { path = "../microamp_experimental" } # enabled this if multi-binary support is needed


[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"

embedded-hal = "0.2.7"
panic-halt = "0.2.0"


defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
