[package]
name = "rtic-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
rtic-core = { path = "../../rtic-core", features = [
    # "debug_expand",
    "multibin",
] }
rtic-auto-assign = { path = "../../rtic-auto-assign" }
syn = { version = "2.0.52", features = ["extra-traits", "full"] }
rtic-sw-pass = { path = "../../rtic-sw-pass", features = ["multibin"] }
# rtic-sw-pass = { path = "../../rtic-sw-pass" }
