[package]
name = "pcs-pass"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.79" }
quote = { version = "1.0.35" }
syn = { version = "2.0.53", features = [
    "extra-traits",
    "full",
] }
rtic-core = { path = "../../../rtic-core" }
atalanta-macros = { package = "atalanta-bsp-macros", path = "../../Atalanta/examples/atalanta-bsp/macros" }
